--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@
                       <span class="obliqueline"> 60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
+              <h6 class="text-white text-center mb-3">
+                  <span lang="en">Vegan (Plant-based) diet </span>
+                  <span lang="fr">Diète vegane </span>
+                  <span lang="pt">Plano nutricional vegano (plant-based) </span>
+                  <a target="_blank" href="https://blog.be100you.com/post/616833753160024064/vegan-diet-plant-based-diet" class="js-scroll-trigger">
+                      <i class="fas fa-file-alt fa-lg"></i>&nbsp;post
+                  </a>
+              </h6>
               <h6 class="text-white-50 text-center mb-3">
                   <span lang="en">Muscle Gain diet - soon</span>
                   <span lang="fr">Diète pour la prise de masse - bientôt</span>
@@ -326,14 +334,6 @@
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
                    </a>
-              </h6>
-              <h6 class="text-white-50 text-center mb-3">
-                  <span lang="en">Vegan (Plant-based) diet - soon</span>
-                  <span lang="fr">Diète vegane - bientôt</span>
-                  <span lang="pt">Plano nutricional vegano (plant-based) - aguarde</span>
-                  <a href="#nutrition" class="text-white-50 js-scroll-trigger">
-                      <i class="fas fa-hourglass-half fa-lg"></i>
-                  </a>
               </h6>
           </div>
       </div>
@@ -392,22 +392,6 @@
                       <i class="fas fa-file-alt fa-lg"></i>&nbsp;pdf
                   </a>
               </h6>
-              <h6 class="text-white-50 text-center mb-3">
-                  <span lang="en">Meditation - soon </span>
-                  <span lang="fr">Meditation - bientôt </span>
-                  <span lang="pt">Meditação - aguarde </span>
-                  <a href="#rest" class="text-white-50 js-scroll-trigger">
-                      <i class="fas fa-hourglass-half fa-lg"></i>
-                   </a>
-              </h6>
-              <h6 class="text-white-50 text-center mb-3">
-                  <span lang="en"> Breathing technique - soon</span>
-                  <span lang="fr"> La respiration - bientôt</span>
-                  <span lang="pt"> Técnicas de respiração - aguarde</span>
-                  <a href="#rest" class="text-white-50 js-scroll-trigger">
-                      <i class="fas fa-hourglass-half fa-lg"></i>
-                  </a>
-              </h6>
               <h6 class="text-white text-center mb-3">
                   <span lang="en">Heart coherence </span>
                   <span lang="fr">Cohérence cardiaque </span>
@@ -426,6 +410,22 @@
                   <span lang="pt"> Técnina de respiração quadrada</span>
                   <a href="https://youtu.be/PSAhrB2V5kQ" target="_blank" class="js-scroll-trigger">
                       <i class="fab fa-youtube fa-lg"></i>&nbsp;youtube
+                  </a>
+              </h6>
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en">Meditation - soon </span>
+                  <span lang="fr">Meditation - bientôt </span>
+                  <span lang="pt">Meditação - aguarde </span>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                   </a>
+              </h6>
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en"> Breathing technique - soon</span>
+                  <span lang="fr"> La respiration - bientôt</span>
+                  <span lang="pt"> Técnicas de respiração - aguarde</span>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
                   </a>
               </h6>
           </div>
