--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </script>
 </head>
 
-<body class="en" id="page-top">
+<body class="fr" id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
