--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <title>be100you - Explore 100% of your potential!</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
-    <link rel="manifest" href="/icon/site.webmanifest">
-    <link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/icon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="icon/site.webmanifest">
+    <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="icon/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/icon/browserconfig.xml">
+    <meta name="msapplication-config" content="icon/browserconfig.xml">
     <meta name="theme-color" content="#141414">
 
     <!-- Bootstrap core CSS -->
@@ -57,13 +57,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#exercise"><i class="fas fa-dumbbell fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#nutrition"><i class="fas fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-instagram fa-2x"></i> <i class="far fa-comment fa-2x"></i></a>
@@ -147,7 +147,7 @@
                 <table>
                     <tr>
                         <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;" colspan="3">
-                            <a class="js-scroll-trigger" href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i>
+                            <a class="js-scroll-trigger" href="#exercise"><i class="fas fa-dumbbell fa-2x"></i>
                             <br/>
                             <span lang="en">Exercise</span>
                             <span lang="fr">Exercice</span>
@@ -156,8 +156,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
-                            <a class="js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i>
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black; min-width: 90px;">
+                            <a class="js-scroll-trigger" href="#nutrition"><i class="fas fa-apple-alt fa-2x"></i>
                             <br/>
                             <span lang="en">Nutrition</span>
                             <span lang="fr">Nutrition</span>
@@ -169,8 +169,8 @@
                                 <img src="img/triangle.png" style="width: 15vw;" />
                             </object>
                         </td>
-                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
-                            <a class="js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i>
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black; min-width: 90px;">
+                            <a class="js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i>
                             <br/>
                             <span lang="en">Rest</span>
                             <span lang="fr">Repos</span>
@@ -201,14 +201,13 @@
               <span lang="pt"> EXERCÍCIO </span>
           </div>
         </div>
-        <div id="exercise" class="col-xl-4 col-lg-5">
+        <div id="exercise" class="col-xl-4 col-lg-5 py-3 pr-2">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white">
-                <i class="fas fa-running fa-lg"></i>
+                <i class="fas fa-dumbbell fa-lg"></i>
                 <span lang="en"> EXERCISE </span>
                 <span lang="fr"> EXERCICE </span>
                 <span lang="pt"> EXERCÍCIO </span>
-                <i class="fas fa-dumbbell fa-lg"></i>
              </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">To maintain a good performance our bodies need to move.</span>
@@ -231,17 +230,20 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-white-50 text-center mb-3">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
-                      <span lang="en"> Personalized program - contact us</span>
-                      <span lang="fr"> Programme personnalisé - nous contacter</span>
-                      <span lang="pt"> Programa personalizado - entrar em contato</span>
-                      <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
+                  <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger exercise"> -->
+                  <a href="exercise" class="js-scroll-trigger exercise">
+                      <button type="button" class="btn btn-primary btn-exercise">
+                          <i class="fas fa-dumbbell fa-lg"></i>
+                          <span lang="en"> Personalized training program</span>
+                          <span lang="fr"> Programme d'entraînement personnalisé</span>
+                          <span lang="pt"> Programa de treinamento personalizado</span>
+                      </button>
                   </a>
               </h6>
               <h6 class="text-white-50 text-center mb-3">
-                  <span lang="en"> Quarantine (Bodyweight) program - soon</span>
-                  <span lang="fr"> Programme spécial quarantaine (poids du corps) - bientôt</span>
-                  <span lang="pt"> Programa especial quarentena (peso corporal) - aguarde</span>
+                  <span lang="en"> Bodyweight program (for home) - soon</span>
+                  <span lang="fr"> Programme poids du corps (à la maison) - bientôt</span>
+                  <span lang="pt"> Programa de peso corporal (para casa) - aguarde</span>
                   <a href="#exercise" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
                   </a>
@@ -274,14 +276,13 @@
               <span lang="pt">NUTRIÇÃO</span>
           </div>
         </div>
-        <div id="nutrition" class="col-xl-4 col-lg-5">
+        <div id="nutrition" class="col-xl-4 col-lg-5 py-3 pr-2">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white">
-                <i class="fas fa-utensil-spoon fa-lg"></i>
+                <i class="fas fa-apple-alt fa-lg"></i>
                 <span lang="en"> NUTRITION </span>
                 <span lang="fr"> NUTRITION </span>
                 <span lang="pt"> NUTRIÇÃO </span>
-                <i class="fas fa-apple-alt fa-lg"></i>
             </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">Our intestine is our "second brain", with more than 200 million neurons.</span>
@@ -303,14 +304,16 @@
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white text-center mb-3">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
-                      <span lang="en"> Personalized diet - contact us</span>
-                      <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
-                      <span lang="pt"> Plano nutricional personalizado - entrar em contato</span>
-                      <span class="obliqueline"> 60€&nbsp;</span>&nbsp;39€
+              <!-- <h6 class="text-white text-center mb-3">
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger">
+                      <button type="button" class="btn btn-primary btn-nutrition">
+                          <i class="fas fa-apple-alt fa-lg"></i>
+                          <span lang="en"> Personalized diet</span>
+                          <span lang="fr"> Plan alimentaire personnalisé</span>
+                          <span lang="pt"> Plano nutricional personalizado</span>
+                      </button>
                   </a>
-              </h6>
+              </h6> -->
               <h6 class="text-white text-center mb-3">
                   <span lang="en">Vegan (Plant-based) diet </span>
                   <span lang="fr">Diète vegane </span>
@@ -355,14 +358,13 @@
               <span lang="pt">REPOUSO</span>
           </div>
         </div>
-        <div id="rest" class="col-xl-4 col-lg-5">
+        <div id="rest" class="col-xl-4 col-lg-5 py-3 pr-2">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white">
                 <i class="fas fa-cloud-moon fa-lg"></i>
                 <span lang="en"> REST </span>
                 <span lang="fr"> REPOS </span>
                 <span lang="pt"> REPOUSO </span>
-                <i class="fas fa-bed fa-lg"></i>
             </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">The benefits of good rest are huge, it creates synergy between body and mind, restructuring the individual.</span>
@@ -421,8 +423,8 @@
                    </a>
               </h6>
               <h6 class="text-white-50 text-center mb-3">
-                  <span lang="en"> Breathing technique - soon</span>
-                  <span lang="fr"> La respiration - bientôt</span>
+                  <span lang="en"> Breathing techniques - soon</span>
+                  <span lang="fr"> Techniques de respiration - bientôt</span>
                   <span lang="pt"> Técnicas de respiração - aguarde</span>
                   <a href="#rest" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
@@ -445,7 +447,7 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <div class="author-photo">
-                  <img src="img/bg-about.jpg">
+                  <img src="img/thomas.jpg">
                 </div>
                 <div class="text-white">THOMΛS TOURNU</div>
                 <hr class="my-4">
@@ -500,21 +502,23 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto justify-content-center social">
-            <span lang="en">Thanks for visiting, see you again soon.</span>
-            <span lang="fr">Merci de votre visite, à très bientôt.</span>
-            <span lang="pt">Obrigado pela visita, até logo.</span>
+            <span lang="en">Thanks for visiting, see you again soon</span>
+            <span lang="fr">Merci de votre visite, à très bientôt</span>
+            <span lang="pt">Obrigado pela visita, até logo</span>
             <br/><br/>
             be100you
             <br/><br/>
-            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a>
-            <span lang="en"> send us a letter</span>
-            <span lang="fr"> envoyez-nous une lettre</span>
-            <span lang="pt"> envie-nos uma carta</span>
-            <br/><br/>
+            <a href="mailto:contact@be100you.com">
+                <i class="far fa-envelope"></i>
+                <span lang="en"> send us a letter</span>
+                <span lang="fr"> envoyez-nous une lettre</span>
+                <span lang="pt"> envie-nos uma carta</span>
+            </a>
+            <!-- <br/><br/>
             <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a>
             <span lang="en"> rights and terms</span>
             <span lang="fr"> droits et conditions</span>
-            <span lang="pt"> direitos e termos</span>
+            <span lang="pt"> direitos e termos</span> -->
         </div>
       </div>
     </div>
