--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <h2 class="text-white mx-auto mt-5 mb-2">
           <span lang="en">Explore 100% of your potential!</span>
-          <span lang="fr">Explorez 100% de votre potentiel!</span>
+          <span lang="fr">Explorez 100% de votre potentiel !</span>
           <span lang="pt">Explore 100% de seu potencial!</span>
         </h2>
         <h2 class="text-white mx-auto mt-2 mb-2">
@@ -316,7 +316,7 @@
               </h6> -->
               <h6 class="text-white text-center mb-3">
                   <span lang="en">Vegan (Plant-based) diet </span>
-                  <span lang="fr">Diète vegane </span>
+                  <span lang="fr">Diète vegan (plant-based) </span>
                   <span lang="pt">Plano nutricional vegano (plant-based) </span>
                   <a target="_blank" href="https://blog.be100you.com/post/616833753160024064/vegan-diet-plant-based-diet" class="js-scroll-trigger">
                       <i class="fas fa-file-alt fa-lg"></i>&nbsp;post
