--- a/rest/index.html
+++ b/rest/index.html
@@ -46,7 +46,7 @@
                 <span style="background-image: url('../img/meditation.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
                     <h2>Des contenus et outils pour votre détente et récupération</h2>
-                    <p>Nos corps ont besoin du repos pour  !</p>
+                    <p>Nos corps et esprits ont besoin du repos ! Plusieurs techniques et produits peuvent nous aider à avoir une qualité de détente supérieure, et ainsi une meilleure récuperation physique et mentale.</p>
                 </div>
             </a>
         </li>
@@ -97,7 +97,7 @@
             <a id="checkout-button-price_1GqUIpCdJrGKJNulDqgNtBv0" role="link" style="cursor: pointer;">
                 <span style="background-image: url('../img/store/candle-brown.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
-                    <h2 style="text-align: center;">Bougie méditation</h2>
+                    <h2 style="text-align: center;">Bougie méditation qualité supérieure</h2>
                     <p><center><b>20 €</b><br>(livraison gratuite)</center></p>
                 </div>
             </a>
