--- a/exercise/index.html
+++ b/exercise/index.html
@@ -46,7 +46,7 @@
                 <span style="background-image: url('../img/gym.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
                     <h2>Un programme adapté aux besoins individuels</h2>
-                    <p>Votre entraînement à la salle de sport sera personnalisé à votre corps et objectifs, ainsi qu'à votre disponibilité en temps et matériel !</p>
+                    <p>Votre entraînement, à la salle de sport ou à la maison, sera personnalisé à votre corps et objectifs, ainsi qu'à votre disponibilité en temps et matériel !</p>
                 </div>
             </a>
         </li>
