--- a/index.html
+++ b/index.html
@@ -440,6 +440,13 @@
   <section id="contact" class="contact-section bg-black">
     <div class="container">
 
+    <div class="row">
+        <div class='embedsocial-instagram' data-ref="1d519d42e0f4d79c0ae294a67b98841f2c6a1b82"></div>
+        <script>
+            (function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));
+        </script>
+    </div>
+
       <div class="row">
 
         <div class="col-md-6 mb-9 mb-md-0">
