--- a/index.html
+++ b/index.html
@@ -436,20 +436,32 @@
     </div>
   </section>
 
+  <section class="projects-section bg-black">
+    <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="text-center text-white mb-4">
+                Instagram <a target="_blank" href="http://instagram.com/be100you">@be100you</a>
+            </h2>
+          </div>
+          <div class="col-12" style="max-height: 550px; overflow: hidden;">
+              <div class="embedsocial-instagram" data-ref="1d519d42e0f4d79c0ae294a67b98841f2c6a1b82" style="margin-top: -100px;">
+                  <iframe src="https://embedsocial.com/api/pro_album/instagram/1d519d42e0f4d79c0ae294a67b98841f2c6a1b82" id="embedIFrame_1d519d42e0f4d79c0ae294a67b98841f2c6a1b82txzql" class="embedsocial-in-album-iframe" scrolling="no" style="width: 0px; height: 1566px; max-height: 100%; max-width: 100%; min-height: 100%; min-width: 100%; border: 0px; overflow: hidden;"></iframe></div>
+              <script>
+                  (function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));
+              </script>
+          </div>
+        </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
     <div class="container">
 
-    <div class="row">
-        <div class='embedsocial-instagram' data-ref="1d519d42e0f4d79c0ae294a67b98841f2c6a1b82"></div>
-        <script>
-            (function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));
-        </script>
-    </div>
-
       <div class="row">
 
-        <div class="col-md-6 mb-9 mb-md-0">
+        <div class="col-md-4 mb-9 mb-md-0">
           <a target="_blank" href="http://instagram.com/thomas_tournu">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
@@ -464,7 +476,22 @@
           </a>
         </div>
 
-        <div class="col-md-6 mb-9 mb-md-0">
+        <div class="col-md-4 mb-9 mb-md-0">
+          <a target="_blank" href="http://instagram.com/be100you">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <div class="author-photo">
+                  <img src="img/profile.jpg">
+                </div>
+                <div class="text-white">be100you</div>
+                <hr class="my-4">
+                <h5 class="text-white m-0">Explore 100% of your potential!</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-md-4 mb-9 mb-md-0">
           <a target="_blank" href="https://iaco.me/hi">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
