--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     </div>
   </section>
 
-  <section class="projects-section bg-black">
+  <section id="contact" class="projects-section bg-black">
     <div class="container">
         <div class="row">
           <div class="col-12">
@@ -456,7 +456,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
+  <section class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
