--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             <a class="nav-link js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-instagram fa-2x"></i> <i class="far fa-comment fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#instagram"><i class="fab fa-instagram fa-2x"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user-friends fa-2x"></i></a>
           </li>
         </ul>
       </div>
@@ -436,7 +439,7 @@
     </div>
   </section>
 
-  <section id="contact" class="projects-section bg-black">
+  <section id="instagram" class="projects-section bg-black">
     <div class="container">
         <div class="row">
           <div class="col-12">
@@ -456,7 +459,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
