--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a class="nav-link js-scroll-trigger" href="#instagram"><i class="fab fa-instagram fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user-friends fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fas fa-user-friends fa-2x"></i></a>
           </li>
         </ul>
       </div>
