--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#exercise"><i class="fas fa-dumbbell fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#triangle"><i class="fas fa-mountain fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#nutrition"><i class="fas fa-apple-alt fa-2x"></i></a>
@@ -118,17 +118,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h1 class="text-white mb-4">
+                <h1 id="triangle" class="text-white mb-4">
                     <span lang="en">The Health Triangle</span>
                     <span lang="fr">Le Triangle de Santé</span>
                     <span lang="pt">O Triângulo da Saúde</span>
                 </h1>
                 <i>
                   <h5 class="text-white mx-auto">
-                      <span lang="en">Our physical health has 3 main components:</span>
-                      <span lang="fr">Notre santé physique a 3 composants principaux&nbsp;:</span>
-                      <span lang="pt">Nossa saúde física tem 3 componentes principais:</span>
+                      <span lang="en">The pillars of our physical health:</span>
+                      <span lang="fr">Les piliers de notre santé physique&nbsp;:</span>
+                      <span lang="pt">Os pilares de nossa saúde física:</span>
                   </h5>
+                  <!--
                   <h5 class="text-white mx-auto">
                       <span lang="en">Exercise - gym, outside & inside sports...</span>
                       <span lang="fr">Exercice - salle de sport, sports individuels et collectifs...</span>
@@ -144,6 +145,7 @@
                       <span lang="fr">Repos - le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
                       <span lang="pt">Repouso - qualidade do sono, tranquilidade da mente, controle do estresse...</span>
                   </h5>
+                  -->
                 </i>
                 <br/>
                 <center>
@@ -196,7 +198,7 @@
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
-        <div class="col-xl-8 col-lg-7">
+        <div class="col-xl-6 col-lg-5">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/gym.jpg" alt="">
           <div class="middle">
               <span lang="en"> EXERCISE </span>
@@ -204,7 +206,7 @@
               <span lang="pt"> EXERCÍCIO </span>
           </div>
         </div>
-        <div id="exercise" class="col-xl-4 col-lg-5 py-3 pr-2">
+        <div id="exercise" class="col-xl-6 col-lg-7 py-3 pr-2">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white">
                 <i class="fas fa-dumbbell fa-lg"></i>
@@ -436,25 +438,6 @@
           </div>
       </div>
 
-    </div>
-  </section>
-
-  <section id="instagram" class="projects-section bg-black">
-    <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="text-center text-white mb-4">
-                Instagram <a target="_blank" href="http://instagram.com/be100you">@be100you</a>
-            </h2>
-          </div>
-          <div class="col-12" style="max-height: 830px; overflow: hidden;">
-              <div class="embedsocial-instagram" data-ref="1d519d42e0f4d79c0ae294a67b98841f2c6a1b82" style="margin-top: -100px;">
-                  <iframe src="https://embedsocial.com/api/pro_album/instagram/1d519d42e0f4d79c0ae294a67b98841f2c6a1b82" id="embedIFrame_1d519d42e0f4d79c0ae294a67b98841f2c6a1b82txzql" class="embedsocial-in-album-iframe" scrolling="no" style="width: 0px; height: 1566px; max-height: 100%; max-width: 100%; min-height: 100%; min-width: 100%; border: 0px; overflow: hidden;"></iframe></div>
-              <script>
-                  (function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));
-              </script>
-          </div>
-        </div>
     </div>
   </section>
 
