--- a/form/index.html
+++ b/form/index.html
@@ -1,11 +1,63 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>IΛCO VIVΛCI</title>
-        <meta http-equiv="refresh" content="0; url=https://forms.gle/UPXFYquSA8zSkYdGA">
-        <script type="text/javascript"> window.location.href = "https://forms.gle/UPXFYquSA8zSkYdGA" </script>
-    </head>
-    <body>
-        If you are not redirected automatically, click this <a href="https://forms.gle/UPXFYquSA8zSkYdGA">link</a>.
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>IΛCO VIVΛCI</title>
+    <link rel="stylesheet" href="../config/list.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+</head>
+<body>
+    <ul>
+        <hr style="width: 30%;">
+        <li class="i-s">
+            <a target="_blank" href="https://forms.gle/vDPCRRw1rL1ko1Ms5">
+                <div class='logo'>
+                    <i class='fas fa-edit fa-2x'></i>
+                </div>
+                <p class='title'>
+                    Entretien nouveau programme
+                    <span>(formulaire)</span>
+                </p>
+            </a>
+        </li>
+        <li class="i-s">
+            <a target="_blank" href="https://docs.google.com/spreadsheets/d/1qfXqzIiVDAn3_RhsG0nPOXp02-X7p0oJj0XGRZ0RJ2Y/edit?usp=sharing">
+                <div class='logo'>
+                    <i class='fas fa-eye fa-2x'></i>
+                </div>
+                <p class='title'>
+                    Entretien nouveau programme
+                    <span>(tableau avec réponses)</span>
+                </p>
+            </a>
+        </li>
+        <hr style="width: 30%;">
+        <li class="i-s">
+            <a target="_blank" href="https://forms.gle/BpnAczKVRZu8BvSx7">
+                <div class='logo'>
+                    <i class='fas fa-edit fa-2x'></i>
+                </div>
+                <p class='title'>
+                    Suivi hebdo (poids...)
+                    <span>(formulaire)</span>
+                </p>
+            </a>
+        </li>
+        <li class="i-s">
+            <a target="_blank" href="https://docs.google.com/spreadsheets/d/1Q4ILf_Bbc_VoX9m2QvxXNBPiaAyER2MUGpV94OBiNFU/edit?usp=sharing">
+                <div class='logo'>
+                    <i class='fas fa-eye fa-2x'></i>
+                </div>
+                <p class='title'>
+                    Suivi hebdo (poids...)
+                    <span>(tableau avec réponses)</span>
+                </p>
+            </a>
+        </li>
+        <hr style="width: 30%;">
+    </ul>
+</body>
+
 </html>
