--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <span lang="pt">Informações práticas e curiosidades</span>
             </h5>
             <h6 class="text-white-50 text-center mb-3">
-                <a href="exercise-list" class="js-scroll-trigger exercise">
+                <a target="_blank" href="https://be100you.com/vegan" class="js-scroll-trigger exercise">
                     <button type="button" class="btn btn-primary btn-nutrition">
                         <i class="fas fa-seedling fa-lg"></i>
                         <span lang="en"> Vegan diet (plant-based)</span>
@@ -564,20 +564,20 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-9 mb-md-0">
-          <a target="_blank" href="http://instagram.com/thomas_tournu">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <div class="author-photo">
-                  <img src="img/thomas.jpg">
+          <div class="col-md-4 mb-9 mb-md-0">
+            <a target="_blank" href="https://iaco.me/bio">
+              <div class="card py-4 h-100">
+                <div class="card-body text-center">
+                  <div class="author-photo">
+                    <img src="img/iaco.jpg">
+                  </div>
+                  <div class="text-white">IΛCO VIVΛCI</div>
+                  <!-- <hr class="my-4"> -->
+                  <!-- <h5 class="text-white m-0">I thrive on taking good care #tgc of life</h5> -->
                 </div>
-                <div class="text-white">THOMΛS TOURNU</div>
-                <hr class="my-4">
-                <h5 class="text-white m-0">I strive for finding the mind & body synergy</h5>
               </div>
-            </div>
-          </a>
-        </div>
+            </a>
+          </div>
 
         <div class="col-md-4 mb-9 mb-md-0">
           <a target="_blank" href="http://instagram.com/be100you">
@@ -587,23 +587,23 @@
                   <img src="img/profile.jpg">
                 </div>
                 <div class="text-white">be100you</div>
-                <hr class="my-4">
-                <h5 class="text-white m-0">Explore 100% of your potential!</h5>
+                <!-- <hr class="my-4"> -->
+                <!-- <h5 class="text-white m-0">Explore 100% of your potential!</h5> -->
               </div>
             </div>
           </a>
         </div>
 
         <div class="col-md-4 mb-9 mb-md-0">
-          <a target="_blank" href="https://iaco.me/hi">
+          <a target="_blank" href="http://instagram.com/thomas_tournu">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <div class="author-photo">
-                  <img src="img/iaco.jpg">
+                  <img src="img/thomas.jpg">
                 </div>
-                <div class="text-white">IΛCO VIVΛCI</div>
-                <hr class="my-4">
-                <h5 class="text-white m-0">I thrive on taking good care #tgc of life</h5>
+                <div class="text-white">THOMΛS TOURNU</div>
+                <!-- <hr class="my-4"> -->
+                <!-- <h5 class="text-white m-0">I strive for finding the mind & body synergy</h5> -->
               </div>
             </div>
           </a>
