--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <span lang="pt">Informações práticas e curiosidades</span>
             </h5>
             <h6 class="text-white-50 text-center mb-3">
-                <a target="_blank" href="https://be100you.com/vegan" class="js-scroll-trigger exercise">
+                <a target="_blank" href="vegan" class="js-scroll-trigger exercise">
                     <button type="button" class="btn btn-primary btn-nutrition">
                         <i class="fas fa-seedling fa-lg"></i>
                         <span lang="en"> Vegan diet (plant-based)</span>
