--- a/vegan/index.html
+++ b/vegan/index.html
@@ -36,51 +36,79 @@
 
     <br>
     <h2 style="text-align: center;">
-        Programme d'Entraînement
+        Diète Vegan
     </h2>
-    <br>
 
     <ul>
-        <li class="i-b" style="background: linear-gradient(to right, #ca4444, #a57621);">
-            <a class="js-scroll-trigger" href="#pack">
-                <span style="background-image: url('../img/gym.jpg'); background-size: cover; background-position: center;"></span>
-                <div>
-                    <h2>Un programme adapté aux besoins individuels</h2>
-                    <p>Votre entraînement, à la salle de sport ou à la maison, sera personnalisé à votre corps et objectifs, ainsi qu'à votre disponibilité en temps et matériel !</p>
-                </div>
+        <li class="i-s i-t" style="border: 0; max-width: 250px;">
+            <a class="js-scroll-trigger" target="_blank" href="https://blog.be100you.com/post/616833753160024064">
+                <div class='logo'><i class='fas fa-language fa-2x'></i></div>
+                <p class='title'>English version here</p>
             </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li class="i-s i-t bg-nut">
+            <p>Par définition, un «&nbsp;Régime Vegan&nbsp;» 🌱, également appelé «&nbsp;régime végétalien&nbsp;» ou «&nbsp;à base de plantes&nbsp;», est un régime qui ne comprend aucun produit d'origine animale et leurs dérivés, comme par exemple la viande animale, le lait , les œufs, le miel, etc. 🐖🐄🐔</p>
+            <p>C'est important de comprendre que lorsque nous parlons ici d'un «&nbsp;régime&nbsp;», ce n'est pas un plan à court terme pour atteindre un objectif, tel que «&nbsp;perdre du poids&nbsp;» ou «&nbsp;gagner des muscles&nbsp;». Ici, «&nbsp;régime&nbsp;» est simplement la nourriture habituelle consommée par une personne.</p>
+            <p>Ne tombons pas dans le piège de penser qu’un régime vegan est sain par définition. Vous pouvez avoir un régime à base de plantes où vous ne mangez que d'énormes quantités de frites 🍟 et de grandes tablettes de chocolat noir 🍫… Mais devinez quoi&nbsp;? Ce n’est pas du tout sain&nbsp;!</p>
+            <p>Ci-dessous nous discuterons des manières d'optimiser un régime vegan et des possibles avantages d'un tel régime à court et à long terme.</p>
         </li>
     </ul>
 
     <br>
     <h3 style="text-align: center;" id="pack">
-        Vous aurez :
+        Indice
     </h3>
-    <br>
 
     <ul>
-        <li class="i-s">
-            <a class="js-scroll-trigger" href="#exercise">
-                <div class='logo'><i class='fas fa-dumbbell fa-2x'></i></div>
-                <p class='title'>Plan complet d'exercices</p>
+        <li class="i-s i-t">
+            <a class="js-scroll-trigger" href="#who">
+                <div class='logo'><i class='fas fa-user-check fa-2x' style="color: ForestGreen;"></i></div>
+                <p class='title'>Qui peut manger un régime à base de plantes&nbsp;?</p>
+                <p>— Les Athlètes, les personnes avec des problèmes de santé, etc.</p>
             </a>
         </li>
-        <li class="i-s">
-            <a class="js-scroll-trigger" href="#alimentation">
-                <div class='logo'><i class='fas fa-apple-alt fa-2x'></i></div>
-                <p class='title'>Conseils alimentaires</p>
+        <li class="i-s i-t">
+            <a class="js-scroll-trigger" href="#why">
+                <div class='logo'><i class='fas fa-question-circle fa-2x' style="color: DodgerBlue;"></i></div>
+                <p class='title'>Pourquoi une alimentation à base de plantes&nbsp;?</p>
+                <p>— Maladies cardiovasculaires, Cancer, Diabète, etc.</p>
             </a>
         </li>
-        <li class="i-s">
-            <a class="js-scroll-trigger" href="#interview">
-                <div class='logo'><i class='fas fa-user-friends fa-2x'></i></div>
-                <p class='title'>Entretien avec coach</p>
+        <li class="i-s i-t">
+            <a class="js-scroll-trigger" href="#how">
+                <div class='logo'><i class='fas fa-hand-point-right fa-2x' style="color: Gold;"></i></div>
+                <p class='title'>Comment puis-je manger à base de plantes&nbsp;?</p>
+                <p>— Nutriments, Apports journaliers, etc.</p>
             </a>
         </li>
-        <li class="i-s">
-            <a class="js-scroll-trigger" href="#chat">
-                <div class='logo'><i class='fab fa-whatsapp fa-2x'></i></div>
-                <p class='title'>Suivi whatsapp</p>
+        <li class="i-s i-t">
+            <a class="js-scroll-trigger" href="#recipes">
+                <div class='logo'><i class='fas fa-book-open fa-2x' style="color: HotPink;"></i></div>
+                <p class='title'>Recettes vegan</p>
+                <p>— Lasagne, Burger, Mousse, Cookies, Gâteau, etc.</p>
+            </a>
+        </li>
+        <li class="i-s i-t">
+            <a class="js-scroll-trigger" href="#more">
+                <div class='logo'><i class='fas fa-plus-square fa-2x' style="color: Tomato;"></i></div>
+                <p class='title'>D'autres pourquoi...</p>
+                <p>— Environnement, bien-être animal et humain, santé individuelle, etc.</p>
+            </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li class="i-b bg-nut">
+            <a class="js-scroll-trigger" href="#pack">
+                <span style="background-image: url('../img/food.jpg'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <h2>Qui peut manger un régime à base de plantes&nbsp;?</h2>
+                    <p>Qui&nbsp;?</p>
+                    <p>La réponse courte&nbsp;: tout le monde. 🙋‍♂️🙋‍♀️</p>
+                </div>
             </a>
         </li>
     </ul>
