--- a/vegan/index.html
+++ b/vegan/index.html
@@ -101,16 +101,23 @@
     </ul>
 
     <ul>
-        <li class="i-b bg-nut">
-            <a class="js-scroll-trigger" href="#pack">
+        <li class="i-b bg-nut"><a>
                 <span style="background-image: url('../img/food.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
-                    <h2>Qui peut manger un régime à base de plantes&nbsp;?</h2>
+                    <h2>Qui peut manger un régime vegan&nbsp;?</h2>
                     <p>Qui&nbsp;?</p>
                     <p>La réponse courte&nbsp;: tout le monde. 🙋‍♂️🙋‍♀️</p>
                 </div>
-            </a>
-        </li>
+        </a></li>
+        <li class="i-s i-t bg-nut"><a>
+                <div>
+                    <p>La réponse longue:
+
+L'Académie de nutrition et de diététique, qui est la plus grande organisation de professionnels de l'alimentation et de la nutrition, avec plus de 100000 praticiens accrédités, a publié un article déclarant que «Ces régimes [végétariens et végétaliens] conviennent à toutes les étapes du cycle de vie, y compris la grossesse, l'allaitement, la petite enfance, l'enfance, l'adolescence, l'âge adulte et pour les athlètes ». [1]
+
+Mais bien sûr, comme tout autre régime, pour être sain et adéquat, il doit être correctement planifié. 👩‍⚕️👨‍⚕️‍♀️</p>
+                </div>
+        </a></li>
     </ul>
 
     <br>
