--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <div class="author-photo">
                   <img src="img/thomas.jpg">
                 </div>
-                <div class="text-white">THOMΛS TOURNU</div>
+                <div class="text-white">THOMAS TOURNU</div>
                 <!-- <hr class="my-4"> -->
                 <!-- <h5 class="text-white m-0">I strive for finding the mind & body synergy</h5> -->
               </div>
