--- a/vegan/index.html
+++ b/vegan/index.html
@@ -501,7 +501,7 @@
     <ul>
         <li class="i-s i-t bg-exe"><a>
             <div>
-                <p>Nous trouvons également quelques plans pour une diète vegan «&nbsp;prêts à l'emploi&nbsp;» ici&nbsp;: <a href="https://veganhealth.org/meal-plans">🥣🍓 veganhealth.org/meal-plans</a></p>
+                <p>Nous trouvons également quelques plans pour une diète vegan «&nbsp;prêts à l'emploi&nbsp;» ici&nbsp;: <a target="_blank" href="https://veganhealth.org/meal-plans">🥣🍓 veganhealth.org/meal-plans</a></p>
             </div>
         </a></li>
     </ul>
@@ -574,11 +574,11 @@
         <li class="i-s i-t"><a>
             <div>
                 <p>[1] “Position of the Academy of Nutrition and Dietetics: Vegetarian Diets”, https://doi.org/10.1016/j.jand.2016.09.025</p>
-                <p>[2] www.independent.co.uk/life-style/health-and-families/veganism-environmental-impact-planet-reduced-plant-based-diet-humans-study-a8378631.html</p>
-                <p>[3] www.theguardian.com/environment/2018/may/31/avoiding-meat-and-dairy-is-single-biggest-way-to-reduce-your-impact-on-earth</p>
-                <p>[4] www.bbcgoodfood.com/howto/guide/vegan-diet-better-environment</p>
-                <p>[5] www.cowspiracy.com/facts</p>
-                <p>[6] www.bbcgoodfood.com/howto/guide/what-would-world-look-if-everyone-went-vegan</p>
+                <p>[2] independent.co.uk/life-style/health-and-families/veganism-environmental-impact-planet-reduced-plant-based-diet-humans-study-a8378631.html</p>
+                <p>[3] theguardian.com/environment/2018/may/ 31/avoiding-meat-and-dairy-is-single-biggest-way-to-reduce-your-impact-on-earth</p>
+                <p>[4] bbcgoodfood.com/howto/guide/vegan-diet-better-environment</p>
+                <p>[5] cowspiracy.com/facts</p>
+                <p>[6] bbcgoodfood.com/howto/guide/what-would-world-look-if-everyone-went-vegan</p>
                 <p>[7] thevegancalculator.com/animal-slaughter</p>
             </div>
         </a></li>
